--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           });
         }
         </script>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8686381651195908"
+     crossorigin="anonymous"></script>
    </head>
 <body>
     <div class="container">
