--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8686381651195908"
-     crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-8686381651195908">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculadora de notas para os alunos do colégio Einstein">
     <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -19,13 +15,6 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel='manifest' href='/manifest.json'>
-    <script>
-        if ('serviceWorker' in navigator) {
-          window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/sw.js');
-          });
-        }
-        </script>
     
    </head>
 <body>
@@ -51,12 +40,9 @@
 
     <div class="rodape">
         <h1 class="versao">Desenvolvido por <br>Prof. Victor C.</h1>
-        <h1 ><a id="instalar" href="instalacao.html"> Instalar</a></h1>
+        <h1 ><a id="instalar" href="tarefaobrigatoria.html"> TO</a></h1>
+        <h1 ><a id="instalar" href="instalacao.html"> Instalar </a></h1>
     </div>
     
 </body>
 </html>
-
-
-
- 
