--- a/tarefaobrigatoria.html
+++ b/tarefaobrigatoria.html
@@ -100,8 +100,8 @@
     width:auto;
     box-shadow: 1px 1px 5px #000000;
     align-content: center;
-        align-items: center;
-        align-self: center;
+    align-items: center;
+    align-self: center;
     
     }
 
@@ -120,15 +120,10 @@
     }
 
     .checkbox {
-        align-content: center;
-        align-items: center;
-        align-self: center;
-        margin-right: 10px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        vertical-align:top;
-        text-align: center;
-        align-self: normal;
+        padding:10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        transform: scale(1.75);
                     }
 </style>
 
