--- a/segundocolegial.html
+++ b/segundocolegial.html
@@ -134,6 +134,28 @@
     background-color: #1d3557;
     transition: 0.5s;
     }
+
+    .botaoPort{
+    font-family: inherit;
+    font-weight: bolder;
+	font-size: 20px;
+	margin-top: 20px;
+	border: none;
+	color: #fff;
+	background-color: #E57E2B;
+	width: auto;
+    margin-right: 80px;
+    margin-left: 80px;
+	padding: 10px;
+	border-radius: 30px;
+	outline: none;
+	cursor: pointer;
+}
+.botaoPort:hover{
+    background-color: #b15607;
+    color: #fff;
+    transition: 0.5s;
+}
 </style>
 
 <script>
@@ -195,6 +217,7 @@
 
             <div class="rodape">
                 <div><h1 class="versao">Desenvolvido por <br>Prof. Victor C.</h1></div>
+                <p class="botaoPort"><a href="portugues.html"> Português </a></p>
             </div>
     </div>
 </body>
