--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel='manifest' href='/manifest.json'>
-    
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8686381651195908"
+     crossorigin="anonymous"></script>
    </head>
 <body>
     <div class="container">
